--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,66 +9,32 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-
-
     <ImageView
         android:id="@+id/processed_picture"
-        android:layout_width="180dip"
+        android:layout_width="wrap_content"
         android:layout_height="180dip"
+        android:layout_alignLeft="@+id/original_picture"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:scaleType="centerInside" />
 
     <ImageView
         android:id="@+id/original_picture"
-        android:layout_width="180dip"
+        android:layout_width="wrap_content"
         android:layout_height="180dip"
         android:layout_above="@+id/processed_picture"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:scaleType="centerInside" />
 
-            <TextView
-                android:id="@+id/Multiple"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/Close"
-                android:layout_below="@+id/Close"
-                android:layout_marginTop="56dp"
-                android:text="@string/multiple_object" />
-
-            <TextView
-                android:id="@+id/Illumination"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                android:layout_alignTop="@+id/original_picture"
-                android:text="@string/illumination_result" />
-
-            <TextView
-                android:id="@+id/Blurdetect"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/Illumination"
-                android:layout_below="@+id/Illumination"
-                android:layout_marginTop="50dp"
-                android:text="@string/blurdetection" />
-
-            <TextView
-                android:id="@+id/FTBlur"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBottom="@+id/original_picture"
-                android:layout_alignLeft="@+id/Blurdetect"
-                android:layout_marginBottom="24dp"
-                android:text="@string/ftblur" />
-
-            <TextView
-                android:id="@+id/Close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignLeft="@+id/FTBlur"
-                android:layout_alignTop="@+id/processed_picture"
-                android:layout_marginTop="22dp"
-                android:text="@string/close_detection" />
+    <TextView
+        android:id="@+id/Feedback"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="34dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/Feedback_result" />
 
 </RelativeLayout>
