--- a/res/layout/cam_menu.xml
+++ b/res/layout/cam_menu.xml
@@ -10,5 +10,10 @@
           android:icon="@android:drawable/ic_menu_search"
           android:showAsAction="ifRoom"
           android:title="@string/choose"/>
+    
+        <item android:id="@+id/action_upload"
+          android:icon="@android:drawable/ic_menu_upload"
+          android:showAsAction="ifRoom"
+          android:title="@string/upload"/>
 
 </menu>
